AI feature implemented